tests/functional/lang/parse-fail-unexpected-and.err.exp
error: syntax error, unexpected '&&'
       at «stdin»:1:1:
            1| && true
             | ^
            2|
